<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/appSearchBar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/toolbar_search_menu"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/showTutorial"
        android:title="@string/toolbar_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/exportAll"
        android:title="@string/toolbar_exportAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/importAll"
        android:title="@string/toolbar_importAll"
        app:showAsAction="never" />
</menu>