<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditItem"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/shopping_lists_title" />


    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_item_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditItem"
        app:layout_constraintVertical_bias="0.774"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toRightOf="@+id/txtName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditItem" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit_item_price"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/edtPrice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtPrice"
        app:layout_constraintVertical_bias="0.619"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/txtPrice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit_item_category"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/categoryList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoryList"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <Spinner
        android:id="@+id/categoryList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:inputType="numberDecimal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toRightOf="@+id/txtCategory"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice" />

    <TextView
        android:id="@+id/txtActive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit_item_active"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activeSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activeSwitch"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <Switch
        android:id="@+id/activeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left"
        android:textOff="Off"
        android:textOn="On"
        app:layout_constraintLeft_toRightOf="@+id/txtActive"
        app:layout_constraintTop_toBottomOf="@+id/categoryList" />

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeSwitch" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/edit_item_image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgItem" />

    <Button
        android:id="@+id/btSaveShoppingItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="saveShoppingItem"
        android:background="@drawable/button_save_shape"
        android:text="@string/edit_item_save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>